--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <title>YouMi</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__body">
+                <a href="#" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
+                <nav class="header__menu menu">
+                    <div class="menu__wrapper">
+                        <ul class="menu__list">
+                            <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Тарифы</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Психологам</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Материалы</a></li>
+                        </ul>
+                        <button class="menu__button">Личный кабинет</button>
+                    </div>
+                    <div class="menu__burger">
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
     
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
