--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/home-page.css">
     <link rel="import" href="/header.html">
     <title>YouMi</title>
 </head>
@@ -30,7 +31,25 @@
             </div>
         </div>
     </header>
-    
+     <main class="main">
+        <section class="meet">
+            <div class="container">
+                <div class="meet__body">
+                    <div class="meet__content content-meet">
+                        <h3 class="content-meet__title title">Вместе мы справимся</h3>
+                        <h1 class="content-meet__subtitle">Найдите своего психолога онлайн</h1>
+                        <button class="content-meet__button button">Найти психолога</button>
+                        <p class="content-meet__price">2770 руб. за 50 минут сессии</p>
+                    </div>
+                    <div class="meet__image">
+                        <div class="meet__card-img">
+                            <img src="img/home-page/meet/meet.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+     </main>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
 </body>
