--- a/index.html
+++ b/index.html
@@ -367,6 +367,23 @@
                 </div>
             </div>
         </section>
+        <section class="virtual">
+            <div class="container">
+                <div class="virtual__body">
+                    <article class="virtual__content">
+                        <h3 class="virtual__title title">YouMi заботиться о вас даже вне сессий</h3>
+                        <p class="virtual__text">Работая с YouMi от 4 сессий мы дарим доступ к приложению с виртуальным психологом.</p>
+                        <ul class="virtual__list">
+                            <li class="virtual__item">Прорабатывайте себя с помощью упражнений и аудиопрактик</li>
+                            <li class="virtual__item">Ведите личный дневник настроения и получайте подробную статистику о себе</li>
+                            <li class="virtual__item">Расскажите виртуальному психологу о своих чувствах и он подберет актуальный материал</li>
+                        </ul>
+                    </article>
+                    <button class="virtual__button button">Доступно в App Store</button>
+                    
+                </div>
+            </div>
+        </section>
      </main>
      <script src="js/jquery.js"></script>
      <script src="js/slick.min.js"></script>
