--- a/index.html
+++ b/index.html
@@ -384,6 +384,41 @@
                 </div>
             </div>
         </section>
+        <section class="help">
+            <div class="container">
+                <div class="help__body">
+                    <div class="help__inner">
+                        <div class="help__info info-help">
+                            <h3 class="info-help__title title">Экстренная помощь</h3>
+                            <p class="info-help__text text">Если вам необходима <span>срочная психологическая помощь </span>и вы чувствуете, что не можете больше справиться самостоятельно, обратитесь по одному из контактов ниже.</p>
+                        </div>
+                        <div class="help__contact contact-help">
+                            <div class="contact-help__item">
+                                <h3 class="contact-help__title">+7 495 989 50 50</h3>
+                                <p class="contact-help__text text">Центр экстренной психологической помощи МЧС России</p>
+                            </div>
+                            <div class="contact-help__item">
+                                <h3 class="contact-help__title">+7 499 173 09 09</h3>
+                                <p class="contact-help__text text">Московская служба психологической помощи населению</p>
+                            </div>
+                            <div class="contact-help__item">
+                                <h3 class="contact-help__title">8 800 333 44 34</h3>
+                                <p class="contact-help__text text">Бесплатная кризисная линия доверия</p>
+                            </div>
+                            <div class="contact-help__item">
+                                <h3 class="contact-help__title">8 800 700 06 00</h3>
+                                <p class="contact-help__text text">Всероссийский телефон доверия для женщин, пострадавших от домашнего насилия</p>
+                            </div>
+                            <div class="contact-help__item">
+                                <h3 class="contact-help__title">8 800 2000 122</h3>
+                                <p class="contact-help__text text">Всероссийская служба детского телефона доверия</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="img/home-page/help/woman.png" alt="" class="help__woman">
+                </div>
+            </div>
+        </section>
      </main>
      <script src="js/jquery.js"></script>
      <script src="js/slick.min.js"></script>
