--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home-page.css">
-    <link rel="import" href="/header.html">
+    <link rel="stylesheet" href="css/footer.css">
     <title>YouMi</title>
 </head>
 <body>
@@ -419,9 +419,55 @@
                 </div>
             </div>
         </section>
-     </main>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__body footer-flex">
+                <div class="footer-flex__wrapper">
+                    <div class="footer-flex__logo">
+                        <img src="img/footer/logo.png" alt="">
+                     </div>
+                    <div data-da=".footer-flex, 768, 3" class="footer-flex__social" >
+                        <img src="img/footer/vk.png" alt="vk">
+                        <img src="img/footer/telegram.png" alt="telegram">
+                        <img src="img/footer/dzen.png" alt="dzen">
+                    </div>
+                </div>
+
+                
+
+                <div class="footer-flex__email email-footer">
+                    <div class="email-footer__item">
+                       <div class="email-footer__title">Сотрудничество</div>
+                       <a class="email-footer__link" href="mailto:@youmiwork">@youmiwork</a>
+                    </div>
+                    <div class="email-footer__item">
+                        <div class="email-footer__title">Поддержка клиентов</div>
+                        <a class="email-footer__link" href="mailto:@youmi">@youmi</a>
+                    </div>
+                </div>
+                <nav class="footer-flex__nav nav-footer">
+                    <ul class="nav-footer__list">
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">О нас</a></li>
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Блог</a></li>
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Тарифы</a></li>
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Вопрос-ответ</a></li>
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Психологам</a></li>
+                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Контакты</a></li>
+                    </ul>
+                </nav>
+                <d class="footer-flex__documentation documentation-footer">
+                    <a href="#" class="documentation-footer__link">Обработка персональных данных</a>
+                    <a href="#" class="documentation-footer__link">Пользовательское соглашение</a>
+                    <a href="#" class="documentation-footer__link">Юридические документы</a>
+                </d>
+            </div>
+        </div>
+    </footer>
+    
      <script src="js/jquery.js"></script>
      <script src="js/slick.min.js"></script>
+     <script type="module" src="./js/app.js"></script>
      <script src="js/main.js"></script>
 </body>
 </html>
