--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home-page.css">
     <link rel="stylesheet" href="css/footer.css">
-    <title>YouMi</title>
+    <title>Home page</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header__body">
-                <a href="#" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
+                <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
                 <nav class="header__menu menu">
                     <div class="menu__wrapper">
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Тарифы</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Психологам</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Материалы</a></li>
+                            <li class="menu__item"><a href="about-us.html" class="menu__link" target="_blank">О нас</a></li>
+                            <li class="menu__item"><a href="rates.html" class="menu__link" target="_blank">Тарифы</a></li>
+                            <li class="menu__item"><a href="psychologists.html" class="menu__link" target="_blank">Психологам</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link" target="_blank">Материалы</a></li>
                         </ul>
                         <button class="menu__button">Личный кабинет</button>
                     </div>
@@ -428,14 +428,11 @@
                         <img src="img/footer/logo.png" alt="">
                      </div>
                     <div data-da=".footer-flex, 768, 3" class="footer-flex__social" >
-                        <img src="img/footer/vk.png" alt="vk">
-                        <img src="img/footer/telegram.png" alt="telegram">
-                        <img src="img/footer/dzen.png" alt="dzen">
+                        <a href="https://vk.com/"><img src="img/footer/vk.png" alt="vk"></a>
+                        <a href="https://web.telegram.org/k/"><img src="img/footer/telegram.png" alt="telegram"></a>
+                        <a href="https://dzen.ru/"><img src="img/footer/dzen.png" alt="dzen"></a>
                     </div>
                 </div>
-
-                
-
                 <div class="footer-flex__email email-footer">
                     <div class="email-footer__item">
                        <div class="email-footer__title">Сотрудничество</div>
@@ -448,12 +445,12 @@
                 </div>
                 <nav class="footer-flex__nav nav-footer">
                     <ul class="nav-footer__list">
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">О нас</a></li>
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Блог</a></li>
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Тарифы</a></li>
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Вопрос-ответ</a></li>
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Психологам</a></li>
-                        <li class="nav-footer__item"><a href="" class="nav-footer__link">Контакты</a></li>
+                        <li class="nav-footer__item"><a href="about-us.html" class="nav-footer__link" target="_blank">О нас</a></li>
+                        <li class="nav-footer__item"><a href="#" class="nav-footer__link" target="_blank">Блог</a></li>
+                        <li class="nav-footer__item"><a href="rates.html" class="nav-footer__link" target="_blank">Тарифы</a></li>
+                        <li class="nav-footer__item"><a href="#" class="nav-footer__link" target="_blank">Вопрос-ответ</a></li>
+                        <li class="nav-footer__item"><a href="psychologists.html" class="nav-footer__link" target="_blank">Психологам</a></li>
+                        <li class="nav-footer__item"><a href="contacts.html" class="nav-footer__link" target="_blank">Контакты</a></li>
                     </ul>
                 </nav>
                 <d class="footer-flex__documentation documentation-footer">
@@ -464,7 +461,6 @@
             </div>
         </div>
     </footer>
-    
      <script src="js/jquery.js"></script>
      <script src="js/slick.min.js"></script>
      <script type="module" src="./js/app.js"></script>
