--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
         <div class="container">
             <div class="footer__body footer-flex">
                 <div class="footer-flex__wrapper">
-                    <div class="footer-flex__logo">
-                        <img src="img/footer/logo.png" alt="">
-                     </div>
+                    <a class="footer-flex__logo" href="index.html">
+                        <img src="img/footer/logo.png" alt="logo">
+                     </a>
                     <div data-da=".footer-flex, 768, 3" class="footer-flex__social" >
                         <a href="https://vk.com/"><img src="img/footer/vk.png" alt="vk"></a>
                         <a href="https://web.telegram.org/k/"><img src="img/footer/telegram.png" alt="telegram"></a>
