--- a/rates.html
+++ b/rates.html
@@ -49,7 +49,25 @@
                 </div>
             </div>
         </section>
-       
+        <section class="rates">
+            <div class="container">
+                <div class="rates__body">
+                    <div class="rates__title title">Тарифы</div>
+                    <div class="rates__box">
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h3 class="item-rates__title">1 сесия</h3>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 900₽<span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить 2 900₽</button>
+                            </div>
+                            
+                        </article>
+                     </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
