--- a/rates.html
+++ b/rates.html
@@ -56,15 +56,209 @@
                     <div class="rates__box">
                         <article class="rates__item item-rates">
                             <header class="item-rates__header">
-                                <h3 class="item-rates__title">1 сесия</h3>
+                                <h7 class="item-rates__title">1 сесия</h7>
                             </header>
                             <div class="item-rates__content">
                                 <p class="item-rates__price">2 900₽<span>за сессию</span></p>
-                                <button class="item-rates__pay">Оплатить 2 900₽</button>
+                                <button class="item-rates__pay">Оплатить<br>2 900₽</button>
                             </div>
-                            
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">4 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 800₽<span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>11 200₽</button>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 400₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">8 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 750₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>22 000₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 1200₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">16 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 690₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>43 040₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 3 360₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">32 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 550₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>81 600₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 11 200₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">64 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 490₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>159 360₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 26 240₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">96 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 320₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>222 720₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 55 680₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">128 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 200₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>281 600₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода  89 600₽</p>
+                            </footer>
                         </article>
                      </div>
+                     <div class="rates__box rates-slider">
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">1 сесия</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 900₽<span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>2 900₽</button>
+                            </div>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">4 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 800₽<span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>11 200₽</button>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 400₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">8 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 750₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>22 000₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 1200₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">16 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 690₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>43 040₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 3 360₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">32 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 550₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>81 600₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 11 200₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">64 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 490₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>159 360₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 26 240₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">96 сесии</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 320₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>222 720₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода 55 680₽</p>
+                            </footer>
+                        </article>
+                        <article class="rates__item item-rates">
+                            <header class="item-rates__header">
+                                <h7 class="item-rates__title">128 сесий</h7>
+                            </header>
+                            <div class="item-rates__content">
+                                <p class="item-rates__price">2 200₽<br><span>за сессию</span></p>
+                                <button class="item-rates__pay">Оплатить<br>281 600₽</button>
+                                <button class="item-rates__payment">В рассрочку</и>
+                            </div>
+                            <footer class="item-rates__footer">
+                                <p class="item-rates__benefit">выгода  89 600₽</p>
+                            </footer>
+                        </article>
+                     </div>
+                     <form action="#" class="rates__form">
+                        <input type="text" placeholder="Введите промокод" class="rates__form-promo">
+                        <button class="rates__form-send button">Отправить</button>
+                     </form>
                 </div>
             </div>
         </section>
