--- a/rates.html
+++ b/rates.html
@@ -257,8 +257,40 @@
                      </div>
                      <form action="#" class="rates__form">
                         <input type="text" placeholder="Введите промокод" class="rates__form-promo">
-                        <button class="rates__form-send button">Отправить</button>
+                        <button type="submit" class="rates__form-send button">Отправить</button>
                      </form>
+                </div>
+            </div>
+        </section>
+        <section class="virtual">
+            <div class="container">
+                <div class="virtual__body">
+                    <article class="virtual__content">
+                        <h3 class="virtual__title title">Оплачивая пакет от 4 сессий</h3>
+                        <p class="virtual__text">мы дарим доступ к приложению с виртуальным психологом.</p>
+                        <ul class="virtual__list">
+                            <li class="virtual__item">Прорабатывайте себя с помощью упражнений и аудиопрактик</li>
+                            <li class="virtual__item">Ведите личный дневник настроения и получайте подробную статистику о себе</li>
+                            <li class="virtual__item">Расскажите виртуальному психологу о своих чувствах и он подберет актуальный материал</li>
+                        </ul>
+                    </article>
+                    <button class="virtual__button button">Доступно в App Store</button>
+                    
+                </div>
+            </div>
+        </section>
+        <section class="care">
+            <div class="container">
+                <div class="care__body">
+                    <div class="care__content">
+                        <h3 class="care__title">Реферальная программа</h3>
+                        <h3 class="care__subtitle title">Позаботьтесь о других</h3>
+                        <p class="care__text">С помощью реферальной программы вы можете приглашать своих друзей по вашей индивидуальной ссылке и получать 500 рублей за каждого, кто пройдет первую сессию.
+                            Деньги поступают на ваш баланс, с которого вы можете оплачивать сесии.</p>
+                        </div>
+                    <div class="care__img">
+                        <img src="img/rates/care/care.png" alt="care">
+                    </div>
                 </div>
             </div>
         </section>
