--- a/rates.html
+++ b/rates.html
@@ -294,6 +294,27 @@
                 </div>
             </div>
         </section>
+        <section class="programm">
+            <div class="container">
+                <div class="programm__body">
+                    <h3 class="programm__title title">Как происходит программа</h3>
+                    <div class="programm__box">
+                        <div class="programm__item item-box">
+                            <img src="img/rates/programm/one.png" alt="">
+                            <p class="item-box__text text">Копируете и отправляете личную реферальную ссылку</p>
+                        </div>
+                        <div class="programm__item item-box">
+                            <img src="img/rates/programm/two.png" alt="">
+                            <p class="item-box__text text">Ваш друг переходит и регистируется по ней</p>
+                        </div>
+                        <div class="programm__item item-box">
+                            <img src="img/rates/programm/three.png" alt="">
+                            <p class="item-box__text text">Проходит первую сессию, вы получаете бонус на баланс</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
