--- a/psychologists.html
+++ b/psychologists.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/psychologists.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
+   
     <title>psychologists</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header-white">
         <div class="container">
             <div class="header__body">
                 <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
@@ -49,7 +51,44 @@
                 </div>
             </div>
         </section>
-      
+        <section class="advantage">
+            <div class="container">
+                <div class="advantage__body">
+                    <h3 class="advantage__title title">Преимущества работы с YouMi</h3>
+                    <div class="advantage__box">
+                        <article class="advantage__item item-advantage">
+                            <h3 class="item-advantage__title">Даем свободу выбора работать когда и где удобно</h3>
+                            <p class="item-advantage__text text">Вам не нужно арендовать кабинет! Все сессии проходят онлайн, поэтому <span>неважно, где находитесь вы и клиент,</span>  можно работать из любой точки мира. Вы можете самостоятельно корректировать свой график работы и выбирать количество клиентов, ориентируясь на себя.</p>
+                            <img src="img/psychologists/advantage/world.png" alt="world">
+                        </article>
+                        <article class="advantage__item item-advantage">
+                            <h3 class="item-advantage__title">Избавляем от рутины и поиска клиентов</h3>
+                            <p class="item-advantage__text text">Мы продвигаем ваши услуги и освобождаем ваше время.
+                                Наши <span>алгоритмы подбирают вам клиентов</span> с теми запросами, в которых вы наиболее компетентны. У нас удобная и наглядная система записей и переносов встреч в онлайн-кабинете.
+                                <span>Мы отправляем клиентам напоминания</span>о предстоящих сессиях и контролируем оплату.</p>
+                            <img src="img/psychologists/advantage/watch.png" alt="watch">
+                        </article>
+                        <article class="advantage__item item-advantage">
+                            <h3 class="item-advantage__title">Развиваем и поддерживаем</h3>
+                            <p class="item-advantage__text text">Еженедельно проводим супервизорские группы и интервизии. Их можно посещать в качестве докладчика и в качестве слушателя. <span>Регулярно проводим вебинары с приглашенными экспертами</span> из разных направлений психотерапии. Вы сможете участвовать в выборе спикеров или заявить о желании организовать свой вебинар.
+                                Кураторы сервиса <span>оказывают оперативную поддержку</span> по этическим и любым другим вопросам, возникающим в процессе работы с клиентом.</p>
+                            <img src="img/psychologists/advantage/rocket.png" alt="rocket">
+                        </article>
+                        <article class="advantage__item item-advantage">
+                            <h3 class="item-advantage__title">Профессиональное комьюнити</h3>
+                            <p class="item-advantage__text text">YouMi — это не только комфортная работа, <span>это сообщество профессионалов объединенных общей целью.</span> Это мощный нетворкинг и возможность найти среди коллег новых друзей с общими интересам из разных городов и стран.</p>
+                            <img src="img/psychologists/advantage/chat.png" alt="chat">
+                        </article>
+                        <article class="advantage__item item-advantage">
+                            <h3 class="item-advantage__title">Развиваем ваш личный бренд</h3>
+                            <p class="item-advantage__text text">У нас есть свой блог и социальные сети.<span>Наши психологи принимают активное участие в создании контента с указанием авторства.</span>Это позволяет повышать вашу узнаваемость и медийность.
+                                Мы поощряем ваши творческие идеи по развитию сервиса и приветствуем вашу инициативу. За лучшие идеи и реализации мы дарим подарки и материальные вознаграждения.</p>
+                            <img src="img/psychologists/advantage/light-bulb.png" alt="light-bulb">
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
