--- a/rates.html
+++ b/rates.html
@@ -11,7 +11,7 @@
     <title>rates</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header purple">
         <div class="container">
             <div class="header__body">
                 <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
